--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@ lerna-debug.log*
 
 # Tests
 httpRequestTests
-.idea/httpRequests/
+
+# IDE
+.idea/workspace.xml
+.idea/httpRequests
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
